--- a/train.ipynb
+++ b/train.ipynb
@@ -15,7 +15,8 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python37964bitdglconda2e96401c5587439a8bf114176530353d",
-   "display_name": "Python 3.7.9 64-bit ('dgl': conda)"
+   "display_name": "Python 3.7.9 64-bit ('dgl': conda)",
+   "language": "python"
   }
  },
  "nbformat": 4,
@@ -63,7 +64,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7f34c5813af0>"
+       "<torch._C.Generator at 0x7fb04c041bb0>"
       ]
      },
      "metadata": {},
@@ -113,31 +114,20 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
+      "Loading data\n",
       "Loading data\n"
-     ]
-    },
-    {
-     "output_type": "error",
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-3-8c3a46201657>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpath\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_nonov_1_easy/normal_graphs_maps.pkl'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'rb'\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0mgraphs\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaps\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpickle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/.local/lib/python3.7/site-packages/torch/storage.py\u001b[0m in \u001b[0;36m_load_from_bytes\u001b[0;34m(b)\u001b[0m\n\u001b[1;32m    139\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    140\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 141\u001b[0;31m \u001b[0;32mdef\u001b[0m \u001b[0m_load_from_bytes\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    142\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mio\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mBytesIO\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    143\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
      ]
     }
    ],
    "source": [
     "import itertools\n",
     "print('Loading data')\n",
-    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_nonov_1_easy/normal_graphs_maps.pkl'\n",
+    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_no_nov_1_easy/normal_graphs_maps.pkl'\n",
     "with open(path, 'rb') as f:\n",
     "    graphs,maps = pickle.load(f)\n",
     "\n",
     "\n",
-    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_nonov_1_easy/normal_nodeids.pkl'\n",
+    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_no_nov_1_easy/normal_nodeids.pkl'\n",
     "with open(path, 'rb') as f:\n",
     "    node_ids = pickle.load(f)\n",
     "\n",
@@ -151,13 +141,13 @@
     "\n",
     "print('Loading data')\n",
     "#path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_axe_1_hard/novel_graphs_maps.pkl'\n",
-    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/valid/valid_graphs_maps.pkl'\n",
+    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/validation/valid_graphs_maps.pkl'\n",
     "with open(path, 'rb') as f:\n",
     "    nov_graphs,nov_maps = pickle.load(f)\n",
     "\n",
     "\n",
     "#path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/novelgridworlds_axe_1_hard/novel_nodeids.pkl'\n",
-    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/valid/valid_nodeids.pkl'\n",
+    "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/validation/valid_nodeids.pkl'\n",
     "with open(path, 'rb') as f:\n",
     "    nov_node_ids = pickle.load(f)\n",
     "\n",
@@ -170,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -281,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,13 +345,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stderr",
+     "text": [
+      "  0%|          | 0/45 [00:00<?, ?it/s]/home/panagiotis/.local/lib/python3.7/site-packages/torch/nn/functional.py:1614: UserWarning: nn.functional.tanh is deprecated. Use torch.tanh instead.\n",
+      "  warnings.warn(\"nn.functional.tanh is deprecated. Use torch.tanh instead.\")\n",
+      "/home/panagiotis/.local/lib/python3.7/site-packages/torch/nn/functional.py:1625: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
+      "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
+      "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:23: UserWarning: Using a target size (torch.Size([100])) that is different to the input size (torch.Size([100, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:354: UserWarning: This overload of nonzero is deprecated:\n",
+      "\tnonzero(Tensor input, *, Tensor out)\n",
+      "Consider using one of the following signatures instead:\n",
+      "\tnonzero(Tensor input, *, bool as_tuple) (Triggered internally at  /pytorch/torch/csrc/utils/python_arg_parser.cpp:766.)\n",
+      "  actions = torch.nonzero(torch.round(action[k]))\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:237: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  us = torch.tensor(us,dtype = torch.int32).to(device)\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:244: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  norms = torch.tensor(norms, dtype= torch.float32).to(device)\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:245: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "  types = torch.tensor(torch.ones(len(vs)).to(device) + 3,dtype = torch.int32).to(device)\n",
+      "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:45: UserWarning: Using a target size (torch.Size([100])) that is different to the input size (torch.Size([100, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
+      " 98%|█████████▊| 44/45 [01:01<00:01,  1.39s/it]/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:23: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
+      "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:45: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
+      "100%|██████████| 45/45 [01:01<00:00,  1.38s/it]\n",
+      "Epoch [1/10], loss_g: 0.0000, loss_d: 0.5203, real_score: 0.9291, fake_score: 0.2067\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [1/10], loss_g: 0.0000, loss_d: 0.5203, real_score: 0.9291, fake_score: 0.2067, valid_precision: 0.1903, valid_recall: 0.9673, valid_F1: 0.3180, valid_acc: 0.4185\n",
+      "100%|██████████| 45/45 [01:01<00:00,  1.37s/it]\n",
+      "Epoch [2/10], loss_g: 0.0000, loss_d: 0.0281, real_score: 0.9758, fake_score: 0.0035\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [2/10], loss_g: 0.0000, loss_d: 0.0281, real_score: 0.9758, fake_score: 0.0035, valid_precision: 0.1879, valid_recall: 0.9709, valid_F1: 0.3149, valid_acc: 0.4077\n",
+      "100%|██████████| 45/45 [01:00<00:00,  1.35s/it]\n",
+      "Epoch [3/10], loss_g: 0.0000, loss_d: 0.0187, real_score: 0.9826, fake_score: 0.0010\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [3/10], loss_g: 0.0000, loss_d: 0.0187, real_score: 0.9826, fake_score: 0.0010, valid_precision: 0.1888, valid_recall: 0.9709, valid_F1: 0.3162, valid_acc: 0.4113\n",
+      "100%|██████████| 45/45 [00:58<00:00,  1.30s/it]\n",
+      "Epoch [4/10], loss_g: 0.0000, loss_d: 0.2553, real_score: 0.9851, fake_score: 0.1542\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [4/10], loss_g: 0.0000, loss_d: 0.2553, real_score: 0.9851, fake_score: 0.1542, valid_precision: 0.1724, valid_recall: 0.8400, valid_F1: 0.2861, valid_acc: 0.4123\n",
+      "100%|██████████| 45/45 [00:54<00:00,  1.22s/it]\n",
+      "Epoch [5/10], loss_g: 0.0000, loss_d: 0.0336, real_score: 0.9682, fake_score: 0.0005\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [5/10], loss_g: 0.0000, loss_d: 0.0336, real_score: 0.9682, fake_score: 0.0005, valid_precision: 0.1721, valid_recall: 0.8400, valid_F1: 0.2857, valid_acc: 0.4113\n",
+      "100%|██████████| 45/45 [00:53<00:00,  1.20s/it]\n",
+      "Epoch [6/10], loss_g: 0.0000, loss_d: 0.3447, real_score: 0.9812, fake_score: 0.1160\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [6/10], loss_g: 0.0000, loss_d: 0.3447, real_score: 0.9812, fake_score: 0.1160, valid_precision: 0.1895, valid_recall: 0.9200, valid_F1: 0.3143, valid_acc: 0.4373\n",
+      "100%|██████████| 45/45 [01:04<00:00,  1.43s/it]\n",
+      "Epoch [7/10], loss_g: 0.0000, loss_d: 0.0051, real_score: 0.9951, fake_score: 0.0002\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [7/10], loss_g: 0.0000, loss_d: 0.0051, real_score: 0.9951, fake_score: 0.0002, valid_precision: 0.1786, valid_recall: 0.8145, valid_F1: 0.2930, valid_acc: 0.4490\n",
+      "100%|██████████| 45/45 [01:05<00:00,  1.45s/it]\n",
+      "Epoch [8/10], loss_g: 0.0000, loss_d: 0.1227, real_score: 0.9173, fake_score: 0.0001\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [8/10], loss_g: 0.0000, loss_d: 0.1227, real_score: 0.9173, fake_score: 0.0001, valid_precision: 0.1870, valid_recall: 0.9491, valid_F1: 0.3124, valid_acc: 0.4144\n",
+      "100%|██████████| 45/45 [01:02<00:00,  1.40s/it]\n",
+      "Epoch [9/10], loss_g: 0.0000, loss_d: 0.0126, real_score: 0.9890, fake_score: 0.0014\n",
+      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [9/10], loss_g: 0.0000, loss_d: 0.0126, real_score: 0.9890, fake_score: 0.0014, valid_precision: 0.1674, valid_recall: 0.8036, valid_F1: 0.2771, valid_acc: 0.4123\n",
+      "100%|██████████| 45/45 [01:03<00:00,  1.40s/it]\n",
+      "Epoch [10/10], loss_g: 0.0000, loss_d: 0.0054, real_score: 0.9957, fake_score: 0.0011\n",
+      "Epoch [10/10], loss_g: 0.0000, loss_d: 0.0054, real_score: 0.9957, fake_score: 0.0011, valid_precision: 0.1910, valid_recall: 0.9855, valid_F1: 0.3200, valid_acc: 0.4128\n",
+      "CPU times: user 49min 32s, sys: 38.4 s, total: 50min 11s\n",
+      "Wall time: 15min 21s\n"
+     ]
+    }
+   ],
    "source": [
     "#Initialize models and Fit. \n",
-    "\n",
-    "disc = models.MapGraphModel(50,16)\n",
+    "model_predictor = 'agent'\n",
+    "disc = models.MapGraphModel(50,16, model_predictor=model_predictor)\n",
     "device = \"cuda\"\n",
     "disc.to(device)\n",
     "gen =models.RandomGenerator(batch_size)#MapGraphNoveltyInjector(50,16)\n",
@@ -377,9 +425,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "MapGraphModel(\n",
+       "  (agent_layer): Sequential(\n",
+       "    (0): Linear(in_features=160, out_features=32, bias=True)\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Linear(in_features=32, out_features=1, bias=True)\n",
+       "  )\n",
+       "  (GCN1): GraphConv(in=50, out=50, normalization=both, activation=None)\n",
+       "  (GCN2): GraphConv(in=50, out=50, normalization=both, activation=None)\n",
+       "  (GCN3): GraphConv(in=50, out=16, normalization=both, activation=None)\n",
+       "  (Conv): Sequential(\n",
+       "    (0): Conv2d(16, 256, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Dropout(p=0.5, inplace=False)\n",
+       "    (3): Conv2d(256, 128, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): Dropout(p=0.5, inplace=False)\n",
+       "    (6): Conv2d(128, 64, kernel_size=(3, 3), stride=(1, 1), padding=(1, 1))\n",
+       "    (7): Tanh()\n",
+       "  )\n",
+       "  (DiffConv): Sequential(\n",
+       "    (0): Conv2d(128, 32, kernel_size=(3, 3), stride=(1, 1))\n",
+       "    (1): ReLU(inplace=True)\n",
+       "    (2): Dropout(p=0.5, inplace=False)\n",
+       "    (3): Conv2d(32, 16, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (4): ReLU(inplace=True)\n",
+       "    (5): Dropout(p=0.5, inplace=False)\n",
+       "    (6): Conv2d(16, 8, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "    (7): ReLU(inplace=True)\n",
+       "    (8): Conv2d(8, 1, kernel_size=(4, 4), stride=(2, 2), padding=(1, 1))\n",
+       "  )\n",
+       ")"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 7
+    }
+   ],
    "source": [
     "disc = models.MapGraphModel(50,16)\n",
     "device = \"cuda\"\n",
@@ -394,9 +483,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Loading data\n"
+     ]
+    }
+   ],
    "source": [
     "print('Loading data')\n",
     "path = '/media/panagiotis/TOSHIBA EXT1/Research/Novelty_detection/datasets/gridworlds_data/test/test_graphs_maps.pkl'\n",
@@ -417,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -426,9 +523,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "(0.5344827586206896, 1.0, 0.6966292134831461, 0.9318181818181818)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 10
+    }
+   ],
    "source": [
     "p,r,f1,acc\n"
    ]
