--- a/graph_maps.ipynb
+++ b/graph_maps.ipynb
@@ -84,7 +84,7 @@
     "from dgl import DGLGraph\n",
     "from sklearn.metrics import precision_score,recall_score,f1_score\n",
     "import torch.nn as nn\n",
-    "\n",
+    "import os\n",
     "import networkx as nx\n",
     "import json\n",
     "\n",
