--- a/train.ipynb
+++ b/train.ipynb
@@ -64,7 +64,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "<torch._C.Generator at 0x7fb04c041bb0>"
+       "<torch._C.Generator at 0x7f11b243cbb0>"
       ]
      },
      "metadata": {},
@@ -95,7 +95,7 @@
     "from dgl import DGLGraph\n",
     "from sklearn.metrics import precision_score,recall_score,f1_score\n",
     "import torch.nn as nn\n",
-    "\n",
+    "import os\n",
     "import networkx as nx\n",
     "import json\n",
     "import models\n",
@@ -346,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "output_type": "stream",
@@ -357,52 +359,25 @@
       "/home/panagiotis/.local/lib/python3.7/site-packages/torch/nn/functional.py:1625: UserWarning: nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\n",
       "  warnings.warn(\"nn.functional.sigmoid is deprecated. Use torch.sigmoid instead.\")\n",
       "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:23: UserWarning: Using a target size (torch.Size([100])) that is different to the input size (torch.Size([100, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
-      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:354: UserWarning: This overload of nonzero is deprecated:\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:415: UserWarning: This overload of nonzero is deprecated:\n",
       "\tnonzero(Tensor input, *, Tensor out)\n",
       "Consider using one of the following signatures instead:\n",
       "\tnonzero(Tensor input, *, bool as_tuple) (Triggered internally at  /pytorch/torch/csrc/utils/python_arg_parser.cpp:766.)\n",
       "  actions = torch.nonzero(torch.round(action[k]))\n",
-      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:237: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:298: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  us = torch.tensor(us,dtype = torch.int32).to(device)\n",
-      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:244: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:305: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  norms = torch.tensor(norms, dtype= torch.float32).to(device)\n",
-      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:245: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
+      "/media/panagiotis/Samsung_T51/work/Research/Novelty_Detection/MapGraphs/models.py:306: UserWarning: To copy construct from a tensor, it is recommended to use sourceTensor.clone().detach() or sourceTensor.clone().detach().requires_grad_(True), rather than torch.tensor(sourceTensor).\n",
       "  types = torch.tensor(torch.ones(len(vs)).to(device) + 3,dtype = torch.int32).to(device)\n",
       "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:45: UserWarning: Using a target size (torch.Size([100])) that is different to the input size (torch.Size([100, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
-      " 98%|█████████▊| 44/45 [01:01<00:01,  1.39s/it]/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:23: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
+      " 98%|█████████▊| 44/45 [00:28<00:00,  1.57it/s]/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:23: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
       "/home/panagiotis/.conda/envs/dgl/lib/python3.7/site-packages/ipykernel_launcher.py:45: UserWarning: Using a target size (torch.Size([8])) that is different to the input size (torch.Size([8, 1, 1, 1])) is deprecated. Please ensure they have the same size.\n",
-      "100%|██████████| 45/45 [01:01<00:00,  1.38s/it]\n",
-      "Epoch [1/10], loss_g: 0.0000, loss_d: 0.5203, real_score: 0.9291, fake_score: 0.2067\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [1/10], loss_g: 0.0000, loss_d: 0.5203, real_score: 0.9291, fake_score: 0.2067, valid_precision: 0.1903, valid_recall: 0.9673, valid_F1: 0.3180, valid_acc: 0.4185\n",
-      "100%|██████████| 45/45 [01:01<00:00,  1.37s/it]\n",
-      "Epoch [2/10], loss_g: 0.0000, loss_d: 0.0281, real_score: 0.9758, fake_score: 0.0035\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [2/10], loss_g: 0.0000, loss_d: 0.0281, real_score: 0.9758, fake_score: 0.0035, valid_precision: 0.1879, valid_recall: 0.9709, valid_F1: 0.3149, valid_acc: 0.4077\n",
-      "100%|██████████| 45/45 [01:00<00:00,  1.35s/it]\n",
-      "Epoch [3/10], loss_g: 0.0000, loss_d: 0.0187, real_score: 0.9826, fake_score: 0.0010\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [3/10], loss_g: 0.0000, loss_d: 0.0187, real_score: 0.9826, fake_score: 0.0010, valid_precision: 0.1888, valid_recall: 0.9709, valid_F1: 0.3162, valid_acc: 0.4113\n",
-      "100%|██████████| 45/45 [00:58<00:00,  1.30s/it]\n",
-      "Epoch [4/10], loss_g: 0.0000, loss_d: 0.2553, real_score: 0.9851, fake_score: 0.1542\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [4/10], loss_g: 0.0000, loss_d: 0.2553, real_score: 0.9851, fake_score: 0.1542, valid_precision: 0.1724, valid_recall: 0.8400, valid_F1: 0.2861, valid_acc: 0.4123\n",
-      "100%|██████████| 45/45 [00:54<00:00,  1.22s/it]\n",
-      "Epoch [5/10], loss_g: 0.0000, loss_d: 0.0336, real_score: 0.9682, fake_score: 0.0005\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [5/10], loss_g: 0.0000, loss_d: 0.0336, real_score: 0.9682, fake_score: 0.0005, valid_precision: 0.1721, valid_recall: 0.8400, valid_F1: 0.2857, valid_acc: 0.4113\n",
-      "100%|██████████| 45/45 [00:53<00:00,  1.20s/it]\n",
-      "Epoch [6/10], loss_g: 0.0000, loss_d: 0.3447, real_score: 0.9812, fake_score: 0.1160\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [6/10], loss_g: 0.0000, loss_d: 0.3447, real_score: 0.9812, fake_score: 0.1160, valid_precision: 0.1895, valid_recall: 0.9200, valid_F1: 0.3143, valid_acc: 0.4373\n",
-      "100%|██████████| 45/45 [01:04<00:00,  1.43s/it]\n",
-      "Epoch [7/10], loss_g: 0.0000, loss_d: 0.0051, real_score: 0.9951, fake_score: 0.0002\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [7/10], loss_g: 0.0000, loss_d: 0.0051, real_score: 0.9951, fake_score: 0.0002, valid_precision: 0.1786, valid_recall: 0.8145, valid_F1: 0.2930, valid_acc: 0.4490\n",
-      "100%|██████████| 45/45 [01:05<00:00,  1.45s/it]\n",
-      "Epoch [8/10], loss_g: 0.0000, loss_d: 0.1227, real_score: 0.9173, fake_score: 0.0001\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [8/10], loss_g: 0.0000, loss_d: 0.1227, real_score: 0.9173, fake_score: 0.0001, valid_precision: 0.1870, valid_recall: 0.9491, valid_F1: 0.3124, valid_acc: 0.4144\n",
-      "100%|██████████| 45/45 [01:02<00:00,  1.40s/it]\n",
-      "Epoch [9/10], loss_g: 0.0000, loss_d: 0.0126, real_score: 0.9890, fake_score: 0.0014\n",
-      "  0%|          | 0/45 [00:00<?, ?it/s]Epoch [9/10], loss_g: 0.0000, loss_d: 0.0126, real_score: 0.9890, fake_score: 0.0014, valid_precision: 0.1674, valid_recall: 0.8036, valid_F1: 0.2771, valid_acc: 0.4123\n",
-      "100%|██████████| 45/45 [01:03<00:00,  1.40s/it]\n",
-      "Epoch [10/10], loss_g: 0.0000, loss_d: 0.0054, real_score: 0.9957, fake_score: 0.0011\n",
-      "Epoch [10/10], loss_g: 0.0000, loss_d: 0.0054, real_score: 0.9957, fake_score: 0.0011, valid_precision: 0.1910, valid_recall: 0.9855, valid_F1: 0.3200, valid_acc: 0.4128\n",
-      "CPU times: user 49min 32s, sys: 38.4 s, total: 50min 11s\n",
-      "Wall time: 15min 21s\n"
+      "100%|██████████| 45/45 [00:28<00:00,  1.57it/s]\n",
+      "Epoch [1/1], loss_g: 0.0000, loss_d: 0.6165, real_score: 0.9311, fake_score: 0.2285\n",
+      "Epoch [1/1], loss_g: 0.0000, loss_d: 0.6165, real_score: 0.9311, fake_score: 0.2285, valid_precision: 0.1925, valid_recall: 0.9855, valid_F1: 0.3220, valid_acc: 0.4185\n",
+      "CPU times: user 2min 10s, sys: 1.69 s, total: 2min 12s\n",
+      "Wall time: 1min 1s\n"
      ]
     }
    ],
@@ -417,7 +392,7 @@
     "\n",
     "\n",
     "#opt_g = torch.optim.Adam(gen.parameters(), lr = 1e-3, betas=(0.5, 0.999))\n",
-    "epochs = 10\n",
+    "epochs = 1\n",
     "\n",
     "%time f1s_replay = fit(disc, gen, train_loader,epochs, device = device,lr_d = 1e-3, lr_g = 1e-3, test_loader=valid_loader, run_on_valid= True,batch_size = batch_size, model_name=f\"novelty_gan_{model_predictor}_test\")[-1]\n",
     "\n"
@@ -530,7 +505,7 @@
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "(0.5344827586206896, 1.0, 0.6966292134831461, 0.9318181818181818)"
+       "(0.5636363636363636, 1.0, 0.7209302325581396, 0.9393939393939394)"
       ]
      },
      "metadata": {},
